--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
         <head>
                 <meta charset="UTF-8">
-                <title>Paintr, your online Paint</title>
+                <title>Gallery</title>
                 <link rel="stylesheet" type="text/css" href="./static/css/styles.css">
                 <link rel="stylesheet" type="text/css" href="./static/css/basscss.min.css">
                 <link rel="stylesheet" type="text/css" href="./static/css/font-awesome.min.css">
